# phasma

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: cd.yml  ci.yml
configs/: balanced.toml  conservation_priority.toml  cosmological.toml  debug.toml  default.toml  disk_bar.toml  disk_exponential.toml  fujiwara.toml  hernquist.toml  hernquist_galaxy.toml  ht_plummer.toml  isochrone.toml  isolated_plummer.toml  jeans_instability.toml  jeans_stability.toml  jeans_stable.toml  jeans_unstable.toml  king.toml  king_equilibrium.toml  king_model.toml  lomac_plummer.toml  merger.toml  merger_demo.toml  merger_equal.toml  merger_unequal.toml  mixing.toml  multigrid_plummer.toml  mvp.toml  nfw.toml  nfw_dark_matter.toml  nfw_halo.toml  nfw_high_res.toml  nfw_tree.toml  plummer.toml  plummer_128.toml  plummer_64.toml  plummer_adaptive.toml  plummer_bm4.toml  plummer_flow_map.toml  plummer_hires.toml  (+36 more)
src/: annotations.rs  main.rs  notifications.rs  session.rs  sim.rs  themes.rs  toml.rs
src/colormaps/: mod.rs
src/config/: config_tests.rs  defaults.rs  history.rs  mod.rs  presets.rs  validate.rs
src/data/: cache.rs  comparison.rs  live.rs  mod.rs  playback.rs
src/export/: animation.rs  csv.rs  json.rs  mod.rs  npy.rs  parquet.rs  report.rs  screenshot.rs  vtk.rs  zip_archive.rs
src/runner/: batch.rs  compare.rs  convergence.rs  live.rs  mod.rs  monitor.rs  regression.rs  sweep.rs  wizard.rs
src/tui/: action.rs  app.rs  aspect.rs  chart_utils.rs  cli.rs  command_palette.rs  config.rs  errors.rs  export_menu.rs  guard.rs  help.rs  layout.rs  logging.rs  mod.rs  plt_bridge.rs  status_bar.rs
src/tui/components/: density_map.rs  exit_tab.rs  fps.rs  home.rs  mod.rs  prep_tab.rs  run_tab.rs  tab_view.rs
src/tui/tabs/: density.rs  energy.rs  mod.rs  performance.rs  phase_space.rs  poisson_detail.rs  profiles.rs  rank.rs  run_control.rs  settings.rs  setup.rs
src/tui/widgets/: colorbar.rs  data_cursor.rs  form_field.rs  heatmap.rs  mod.rs  scrubber.rs  sparkline_table.rs
tests/: smoke.rs
