[package]
name = "phasma"
version = "0.0.12"
edition = "2024"
description = "Terminal interface for the caustic Vlasov-Poisson solver"
authors = ["Albin <albin@sjoegren.se>"]
build = "build.rs"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/resonant-jovian/phasma"
keywords = ["vlasov", "poisson", "simulation", "tui", "physics"]
categories = ["science", "simulation", "command-line-utilities"]
include = [
    "src/**/*",
    "configs/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
caustic = { path = "../caustic", features = ["hdf5"] }
toml = "1.0.7"
clap = { version = "4.6.0", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
clap_mangen = "0.2.33"
color-eyre = "0.6.5"
crossbeam-channel = "0.5.15"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
directories = "6.0.0"
libc = "1.0.0-alpha.3"
rayon = "1.11.0"
ratatui = { version = "0.30.0", features = ["serde", "macros"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
signal-hook = "0.4.3"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "serde"] }
rust_decimal = "1.40.0"
anyhow = "1.0.102"
zip = "8.2.0"
ndarray = "0.17.2"
ndarray-npy = "0.10.0"
chrono = { version = "0.4.44", features = ["serde"] }
notify-rust = { version = "4.12.0", optional = true }
arrow = "58.0.0"
parquet = "58.0.0"
rustfft = "6.4.1"
ratatui-plt = { path = "../../ratatui-plt", features = ["fft", "async"] }

[dev-dependencies]
paste = "1.0.15"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"

[features]
default = []
notifications = ["notify-rust"]
jemalloc = ["caustic/jemalloc"]
tracy = ["caustic/tracy"]

[build-dependencies]
anyhow = "1.0.102"
vergen-gix = { version = "10.0.0-beta.5", features = ["build", "cargo"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
debug = false

[profile.profiling]
inherits = "release"
debug = true

[lints.rust]
unsafe_code = "deny"
warnings = "forbid"
dead_code = "allow"
deprecated = "allow"
non_upper_case_globals = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
unused_attributes = "allow"
unreachable_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_braces = "allow"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
unwrap_in_result = "deny"
get_unwrap = "deny"
panic = "deny"
too_many_arguments = "allow"
type_complexity = "allow"
# Derive macros (clap, serde) emit these internally
style = { level = "allow", priority = -1 }
complexity = { level = "allow", priority = -1 }
perf = { level = "allow", priority = -1 }
redundant_locals = "allow"
needless_return = "allow"
suspicious_else_formatting = "allow"
diverging_sub_expression = "allow"
